TODO THIS UPDATE: 
- handbook entry
- proper Unconscious compat and/or general hooks for other mods