@@ -10,6 +10,7 @@ using HarmonyLib;
 using System.Collections.Generic;
 using ProtoBuf;
 using static BloodyStory.BloodMath;
+using System.Numerics;
 
 namespace BloodyStory
 {
@@ -66,7 +67,93 @@ namespace BloodyStory
                 .RequiresPrivilege(Privilege.root)
                 .HandleWith(ReloadConfigCommand);
 
+            sapi.ChatCommands.Create("preventbleedout")
+                .WithDescription("Toggles player bleedout (player will not die from bleed)")
+                .RequiresPlayer()
+                .RequiresPrivilege(Privilege.root)
+                .HandleWith(ToggleBleedoutCommand);
+
+            sapi.ChatCommands.Create("togglebleeding")
+                .WithDescription("Toggle processing of player bleeding")
+                .RequiresPlayer()
+                .RequiresPrivilege(Privilege.root)
+                .HandleWith(ToggleBleedingCommand);
+
+            sapi.ChatCommands.Create("togglebleedparticles")
+                .WithDescription("Toggles spawning bleed particles")
+                .RequiresPlayer()
+                .RequiresPrivilege(Privilege.root)
+                .HandleWith(ToggleBleedParticlesCommand);
+
             sapi.Event.PlayerRespawn += OnPlayerRespawn;
+        }
+
+        private TextCommandResult ToggleBleedingCommand(TextCommandCallingArgs args)
+        {
+            EntityBehaviorBleed bleedEB = args.Caller.Entity.GetBehavior<EntityBehaviorBleed>();
+
+            IServerPlayer player = args.Caller.Player as IServerPlayer;
+
+            if (bleedEB.pauseBleedProcess)
+            {
+                bleedEB.pauseBleedProcess = false;
+                player.SendMessage(GlobalConstants.GeneralChatGroup, "Bleeding resumed", EnumChatType.Notification);
+            } else
+            {
+                bleedEB.pauseBleedProcess = true;
+                player.SendMessage(GlobalConstants.GeneralChatGroup, "Bleeding paused", EnumChatType.Notification);
+            }
+
+            return TextCommandResult.Success();
+        }
+
+        private TextCommandResult ToggleBleedParticlesCommand(TextCommandCallingArgs args)
+        {
+            EntityBehaviorBleed bleedEB = args.Caller.Entity.GetBehavior<EntityBehaviorBleed>();
+
+            IServerPlayer player = args.Caller.Player as IServerPlayer;
+
+            if (bleedEB.pauseBleedParticles)
+            {
+                bleedEB.pauseBleedParticles = false;
+                player.SendMessage(GlobalConstants.GeneralChatGroup, "Bleeding resumed", EnumChatType.Notification);
+            }
+            else
+            {
+                bleedEB.pauseBleedParticles = true;
+                player.SendMessage(GlobalConstants.GeneralChatGroup, "Bleeding paused", EnumChatType.Notification);
+            }
+
+            return TextCommandResult.Success();
+        }
+
+        Dictionary<EntityBehaviorBleed, OnBleedoutDelegate> bleedoutDelegateDict;
+
+        private TextCommandResult ToggleBleedoutCommand(TextCommandCallingArgs args)
+        {
+            if (bleedoutDelegateDict == null)
+            {
+                bleedoutDelegateDict = new();
+            }
+            EntityPlayer plEnt = args.Caller.Entity as EntityPlayer;
+            IServerPlayer player = plEnt.Player as IServerPlayer;
+            EntityBehaviorBleed bleedEB = plEnt.GetBehavior<EntityBehaviorBleed>();
+            OnBleedoutDelegate dele;
+
+            if (bleedoutDelegateDict.TryGetValue(bleedEB, out dele))
+            {
+                bleedEB.OnBleedout -= dele;
+                bleedoutDelegateDict.Remove(bleedEB);
+                player.SendMessage(GlobalConstants.GeneralChatGroup, "Bleedout enabled", EnumChatType.Notification);
+            } else
+            {
+                dele = (out bool shouldDie, DamageSource _) => { shouldDie = false; };
+                bleedEB.OnBleedout += dele;
+                bleedoutDelegateDict.Add(bleedEB, dele);
+                player.SendMessage(GlobalConstants.GeneralChatGroup, "Bleedout disabled", EnumChatType.Notification);
+            }
+
+            return TextCommandResult.Success();
         }
 
         private void OnPlayerRespawn(IServerPlayer byPlayer)
